This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
6/9/20: Fixed some problems with taking images and frames with floating point
return with Tietz cameras and added support for GPU version of XF416.

5/31/20: For the hole number and position component of frame file names,
changed the number to a pair of relative values so that it would be invariant
when removing positions or having different pattern sizes.

5/25/20: SEM_3-8-0beta10
5/25/20: Fixed hole finder "Groups" radio button and added optional entries to
script command to set SD and bakc pixel cutoffs.

5/25/20: Made SetProbeMode command accept lower case, not change mode with
a bad entry, and not abort the script after changing mode (In 3.7).

5/24/20: Added ability to acquire simple or aligned sums of each tilt angle
when taking a frame tilt series with K2 or K3.  Added some script commands
for experimental use of this.

5/24/20: Added script commands for getting scale matrices for converting
between various coordinate systems (IS, stage, etc).

5/24/20: Added JeolHasBrightnessZoom property to specify that the version
of TemExt.dll allows use of the BrightnessZoom function.

5/24/20: Fixed screen current scaling for JEOL and converted the scaling
factor of 0.059 commonly found in properties to 1.

5/11/20: Changes to ease use of diffraction mode in Search on JEOL.

5/11/20: Added property RestoreStageXYdelay to set delay after stage restore
on tilting.

5/7/20: Fixed TSDosymBacklashDir property which had no effect, and limited one
angle of dose-symmetric series by the max tilt angle minus backlash.  Also
defaulted max tilt angle to 69.9 for Titans (if UseIllumatedArea set).

5/6/20: SEM_3-8-0beta9
4/29/20: Fixed pixel size stored in TIFF files.

4/28/20: Added property TiltSpeedFactor to set a default tilt speed.
