@@ -2561,6 +2561,9 @@
             then there must be that many lines following. The form of each line is:
             <BR>
             &nbsp;&nbsp;&nbsp; Index&nbsp;&nbsp;&nbsp; Camera length in mm<BR>
+            Any line can also have an optional pixel size in nanometers after the camera length, which
+             will be used to set the pixel spacing in an image file
+            header and in an associated .mdoc file for images taken at that camera length.
             This table is obtained on a JEOL by selecting List Mags in the Calibration menu and 
             appears after the magnification table. On Hitachi, it must be constructed by 
             hand, listing each length found in HC mode.&nbsp; A table can also be added on an FEI
